--- a/index.html
+++ b/index.html
@@ -2,11 +2,36 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+      <header class="main-header">
+      <div class="container">
+      	 <nav class="main-navigation">
+      	 	<figure class="index-logo">
+        <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
+          </figure>
+      	 	<ul>
+            <li>
+              <a href="#">СТУДИЯ</a>
+            </li>
+            <li>
+              <a href="#">КЛИЕНТЫ</a>
+            </li>
+            <li>
+              <a href="#">МАГАЗИН</a>
+            </li>
+            <li>
+              <a href="#">КОНТАКТЫ</a>
+            </li>            
+          </ul>
+          
+        </nav>
+        <div class="user-block">
+          <a class="basket" href="#">КОРЗИНА</a>
+        </div>
+        
+      </div>    
 
   </body>
 </html>
