--- a/index.html
+++ b/index.html
@@ -31,7 +31,42 @@
           <a class="basket" href="#">КОРЗИНА</a>
         </div>
         
-      </div>    
+      </div> 
+       <main class="container">
+       	<div class="slider">
+       	</div>
+       	<section class="features">
+       		<div class="features-item">
+       		<div class="features-image">
+       			<img src="http://placehold.it/150x100" alt="">
+       		</div>
+       		<b class="features-name">Веб-сайты</b>
+       		<p class="features-desc">Мир никогда не будет прежним<br>
+       			после того как вы увидите наш сайт!</p>
+       			<a class="features-anchor" src="#">Заказать</a>
+       		</div>
+       		<div class="features-item">
+       		<div class="features-image">
+       			<img src="http://placehold.it/150x100" alt="">
+       		</div>
+       		<b class="features-name">Приложения</b>
+       		<p class="features-desc">Покорите топ-10 приложений<br>
+       			в AppStore и Google Play</p>       		
+       			<a class="features-anchor" src="#">Заказать</a>
+       		</div>
+       		<div class="features-item">
+       		<div class="features-image">
+       			<img src="http://placehold.it/150x100" alt="">
+       		</div>
+       		<b class="features-name">Презентации</b>
+       		<p class="features-desc">Вы даже не подозреваете<br>
+       			насколько вы изумительны</p>       		
+       			<a class="features-anchor" src="#">Заказать</a>
+       		</div>
+
+       	</section>
+      
+    </main>   
 
   </body>
 </html>
