Разметка раздела о компании + галереи

--- a/index.html
+++ b/index.html
@@ -65,7 +65,63 @@
        		</div>
 
        	</section>
-      
+       	<section class="about-company">
+       		<div class="about-company-content">
+       			<div class="about-company-content-left">
+       				<span class="slogan">Мы-мальнькая,но гордая<br>
+       					дизайн-студия из Краснодара.
+       				</span>
+       				<p class="about-company-desc">Исповедуем принципы минимализма и чистоты.Ставим математический<br>
+       					расчет выше креатива.Работаем не покладая рук,как роботы.</p>
+       			</div>
+
+
+       			<div class="about-company-content-right">
+       				<div class="about-company-logo">
+       					<img src="http://placehold.it/150x100">
+       				</div>
+       		</div>
+       		<div class="aside">
+       			<div class="aside-content">
+       			<div class="aside-content-left">
+       				<h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
+       				<ul>
+       					<li>Веб сайтов любой сложности
+       					</li>
+       					<li>Мобильных приложений для IOS и Android
+       					</li>
+       					<li>Слайдшоу и видео для корпоративных презинтаций
+       					</li>
+       			</div>
+
+       			<div class="aside-content-right">
+       				<h2 class="aside-content-title">Как мы работаем:</h2>
+       				<ul>
+       					<li>С самоотдачей 146%
+       					</li>
+       					<li>Соблюдая сроки на 100%
+       					</li>
+       					<li>По предоплате 50%
+       					</li>
+       				</ul>
+       			</div>
+       		</div>
+       		</div>
+       	</section>
+      <div class="gallery">
+      	<ul class="gallery-list">
+      		<li class="gallery-item">
+      			<img src="http://placehold.it/150x100" alt="">
+      		</li>
+      		<li class="gallery-item">
+      			<img src="http://placehold.it/150x100" alt="">
+      		</li>
+      		<li class="gallery-item">
+      			<img src="http://placehold.it/150x100" alt="">
+      		</li>
+      	</ul>
+      </div>
+
     </main>   
 
   </body>
