--- a/index.html
+++ b/index.html
@@ -130,7 +130,25 @@
       		<section>
       </div>
 
-    </main>   
+    </main>
+    <footer class="main-footer">
+      <div class="container">
+      	<div class="footer-content">
+      		<div class="footer-content-left">
+      			<section class="footer-content-social">
+      	  <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+      			</social>
+      	</div>
 
+      	<div class="footer-content-right">
+      		<section class="footer-content-aside">
+      			<span>Давайте дружить,это выгодно</span>
+      			<p>Скидка 10% для друзей из социальных сетей</p>
+      		</section>
+      	</div>
+      </div>
+    </footer>  
   </body>
 </html>
