--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
           <a class="basket" href="#">КОРЗИНА</a>
         </div>
         
-      </div> 
+      </div>
+      </header> 
        <main class="container">
-       	<div class="slider">
+       	<div class="slider"><!--Осталась не разрешенной проблема с сайдбаром !-->
+
        	</div>
        	<section class="features">
        		<div class="features-item">
@@ -43,7 +45,7 @@
        		<b class="features-name">Веб-сайты</b>
        		<p class="features-desc">Мир никогда не будет прежним<br>
        			после того как вы увидите наш сайт!</p>
-       			<a class="features-anchor" src="#">Заказать</a>
+       			<a class="features-anchor" href="#">Заказать</a>
        		</div>
        		<div class="features-item">
        		<div class="features-image">
@@ -52,7 +54,7 @@
        		<b class="features-name">Приложения</b>
        		<p class="features-desc">Покорите топ-10 приложений<br>
        			в AppStore и Google Play</p>       		
-       			<a class="features-anchor" src="#">Заказать</a>
+       			<a class="features-anchor" href="#">Заказать</a>
        		</div>
        		<div class="features-item">
        		<div class="features-image">
@@ -61,7 +63,7 @@
        		<b class="features-name">Презентации</b>
        		<p class="features-desc">Вы даже не подозреваете<br>
        			насколько вы изумительны</p>       		
-       			<a class="features-anchor" src="#">Заказать</a>
+       			<a class="features-anchor" href="#">Заказать</a>
        		</div>
 
        	</section>
@@ -78,8 +80,9 @@
 
        			<div class="about-company-content-right">
        				<div class="about-company-logo">
-       					<img src="http://placehold.it/150x100">
+       					<img src="http://placehold.it/150x100" alt="">
        				</div>
+       			</div>
        		</div>
        		<div class="aside">
        			<div class="aside-content">
@@ -92,6 +95,7 @@
        					</li>
        					<li>Слайдшоу и видео для корпоративных презинтаций
        					</li>
+       				</ul>
        			</div>
 
        			<div class="aside-content-right">
@@ -105,6 +109,7 @@
        					</li>
        				</ul>
        			</div>
+
        		</div>
        		</div>
        	</section>
@@ -139,7 +144,7 @@
       	  <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-      			</social>
+      			</section>
       	</div>
 
       	<div class="footer-content-right">
