--- a/index.html
+++ b/index.html
@@ -34,8 +34,33 @@
       </div>
       </header> 
        <main class="container">
-       	<div class="slider"><!--Осталась не разрешенной проблема с сайдбаром !-->
+       	<div class="slider">
+          <div class="sider-content">
+            <div class="sider-content-left">
+              <span class="sider-slogan">
+                Долго,дорого,скрупулезно
+              </span>
+              <p>Математически выверенный дизайн<br>
+                для вашего сайта или мобильного приложения.
+              </p>
+              <a href="#">Узнать больше</a>
+            </div>
 
+
+            <div class="sider-content-right">
+              <figure class="sider-image">
+                <img src="http://placehold.it/150x100" alt="">
+              </figure>
+              <form action="#" method="post">                
+                <input type="radio" name="sider" value="1">
+                <input type="radio" name="sider" value="2">
+                <input type="radio" name="sider" value="3">
+              </form>
+            </div>
+
+
+
+          </div>   
        	</div>
        	<section class="features">
        		<div class="features-item">
@@ -127,7 +152,7 @@
       	</ul>
       </div>
       <div class="contacts">
-      	<section class="contacts-adress"><!--не совсем понятно как будет отображаться карта.Наверное через CSS как background-image!-->
+      	<section class="contacts-adress">
       		<h2>NERDS DESIGN STUDIO</h2>
       		191186, Санкт-петербург<br>
       		ул.Б.Коннюшенная, д.19/8
