--- a/catalog.html
+++ b/catalog.html
@@ -43,6 +43,30 @@
         <button type="button" class="btn breadcrumbs-up"></button>        
         <button type="button" class="btn breadcrumbs-down"></button>
       </div>
+      <div class="sidebar">
+        <form action="#" method="post">
+          <fieldset>
+            <legend class="sidebar-title">Стоимость:</legend>
+          <input type="range" name="range">
+          от 0 до 15000
+        </fieldset>
+        <fieldset>
+          <legend class="sidebar-title">Особенности:</legend>
+          <input type="radio" name="features" value="Адаптивная">Адаптивная
+          <input type="radio" name="features" value="Фиксированная">Фиксированная
+          <input type="radio" name="features" value="Резиновая">Резиновая
+        </fieldset>
+        <fieldset>
+          <legend class="sidebar-title">Особенности:</legend>
+          <input type="checkbox" namw="features">Слайдер
+          <input type="checkbox" namw="features">Блок приемуществ
+          <input type="checkbox" namw="features">Новости
+          <input type="checkbox" namw="features">Галерея
+          <input type="checkbox" namw="features">Показать
+        </fieldset>
+        <a href="#" class="sidebar-anchor">Показать</a>
+        </form>
+        <div>
 
 
       
