--- a/catalog.html
+++ b/catalog.html
@@ -66,12 +66,7 @@
         </fieldset>
         <a href="#" class="sidebar-anchor">Показать</a>
         </form>
-        <div>
-
-
-      
-
-
+        <div>    
       <div class="catalog" >        
           <article class="catalog-item">
             <figure class="catalog-content">
@@ -114,8 +109,33 @@
              <a href="#" class="catalog-btn" >Следующая</a>
 
       </div>
-
-
+      <div class="contacts">
+        <section class="contacts-adress">
+          <h2>NERDS DESIGN STUDIO</h2>
+          191186, Санкт-петербург<br>
+          ул.Б.Коннюшенная, д.19/8
+          тел.+7(812)275-75-75
+          <section>
+      </div>
     </main>
+        <footer class="main-footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-content-left">
+            <section class="footer-content-social">
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+            </section>
+        </div>
+
+        <div class="footer-content-right">
+          <section class="footer-content-aside">
+            <span>Давайте дружить,это выгодно</span>
+            <p>Скидка 10% для друзей из социальных сетей</p>
+          </section>
+        </div>
+      </div>
+    </footer>  
   </body>
 </html>
