--- a/catalog.html
+++ b/catalog.html
@@ -84,7 +84,6 @@
            <a href="#" class="catalog-btn" >2</a>
             <a href="#" class="catalog-btn" >3</a>
              <a href="#" class="catalog-btn" >Следующая</a>
-
       </div>
 
        <div class="sidebar">
@@ -102,11 +101,11 @@
         </fieldset>
         <fieldset>
           <legend class="sidebar-title">Особенности:</legend>
-          <input type="checkbox" namw="features">Слайдер
-          <input type="checkbox" namw="features">Блок приемуществ
-          <input type="checkbox" namw="features">Новости
-          <input type="checkbox" namw="features">Галерея
-          <input type="checkbox" namw="features">Показать
+          <input type="checkbox" name="features">Слайдер
+          <input type="checkbox" name="features">Блок приемуществ
+          <input type="checkbox" name="features">Новости
+          <input type="checkbox" name="features">Галерея
+          <input type="checkbox" name="features">Показать
         </fieldset>
         <a href="#" class="sidebar-anchor">Показать</a>
         </form>
