--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
       <header class="main-header">
       <div class="container">
       	 <nav class="main-navigation">
-      	 	<figure class="index-logo">
+      	 	<div class="index-logo">
         <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
-          </figure>
+          </div>
       	 	<ul>
             <li>
-              <a href="#">СТУДИЯ</a>
+              <a href="#">Студия</a>
             </li>
             <li>
-              <a href="#">КЛИЕНТЫ</a>
+              <a href="#">Клиенты</a>
             </li>
             <li>
-              <a href="#">МАГАЗИН</a>
+              <a href="#">Магазин</a>
             </li>
             <li>
-              <a href="#">КОНТАКТЫ</a>
+              <a href="#">Контакты</a>
             </li>            
           </ul>
           
         </nav>
         <div class="user-block">
-          <a class="basket" href="#">КОРЗИНА</a>
+          <a class="basket" href="#">Корзина</a>
         </div>
         
       </div>
@@ -85,7 +85,6 @@
        			насколько вы изумительны</p>       		
        			<a class="features-anchor" href="#">Заказать</a>
        		</div>
-
        	</section>
        	<section class="about-company">
        		<div class="about-company-content">
@@ -96,16 +95,13 @@
        				<p class="about-company-desc">Исповедуем принципы минимализма и чистоты.Ставим математический<br>
        					расчет выше креатива.Работаем не покладая рук,как роботы.</p>
        			</div>
-
-
        			<div class="about-company-content-right">
        				<div class="about-company-logo">
        					<img src="http://placehold.it/150x100" alt="">
        				</div>
        			</div>
        		</div>
-       		<div class="aside">
-       			<div class="aside-content">
+       		<div class="aside">       			
        			<div class="aside-content-left">
        				<h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
        				<ul>
@@ -128,52 +124,48 @@
        					<li>По предоплате 50%
        					</li>
        				</ul>
-       			</div>
-
-       		</div>
+       			</div>       		
        		</div>
        	</section>
       <div class="gallery">
       	<ul class="gallery-list">
       		<li class="gallery-item">
-      			<img src="http://placehold.it/150x100" alt="">
+      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a>
       		</li>
       		<li class="gallery-item">
-      			<img src="http://placehold.it/150x100" alt="">
+      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a>
       		</li>
       		<li class="gallery-item">
-      			<img src="http://placehold.it/150x100" alt="">
+      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a>
       		</li>
       	</ul>
       </div>
       <div class="contacts">
       	<section class="contacts-adress">
-      		<h2>NERDS DESIGN STUDIO</h2>
+      		<h2>NERDS Design Studio</h2>
       		191186, Санкт-петербург<br>
       		ул.Б.Коннюшенная, д.19/8
       		тел.+7(812)275-75-75
-      		<section>
+      		</section>
       </div>
 
     </main>
     <footer class="main-footer">
-      <div class="container">
-      	<div class="footer-content">
+      <div class="container">      	
       		<div class="footer-content-left">
-      			<section class="footer-content-social">
+      			<div class="footer-content-social">
       	  <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-      			</section>
+      			</div>
       	</div>
-
       	<div class="footer-content-right">
-      		<section class="footer-content-aside">
+      		<div class="footer-content-aside">
       			<span>Давайте дружить,это выгодно</span>
       			<p>Скидка 10% для друзей из социальных сетей</p>
-      		</section>
+      		</div>
       	</div>
-      </div>
+        </div>      
     </footer>  
   </body>
 </html>
