--- a/catalog.html
+++ b/catalog.html
@@ -8,43 +8,34 @@
    <header class="main-header">
       <div class="container">
          <nav class="main-navigation">
-          <figure class="index-logo">
+          <div class="index-logo">
         <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
-          </figure>
+          </div>
           <ul>
-            <li>
-              <a href="#">СТУДИЯ</a>
-            </li>
-            <li>
-              <a href="#">КЛИЕНТЫ</a>
-            </li>
-            <li>
-              <a href="#">МАГАЗИН</a>
-            </li>
-            <li>
-              <a href="#">КОНТАКТЫ</a>
-            </li>            
+            <li><a href="#">Студия</a></li>             
+            <li><a href="#">Клиенты</a></li>             
+            <li><a href="#">Магазин</a></li>             
+            <li><a href="#">Контакты</a></li>             
           </ul>          
         </nav>
         <h1>Добро пожаловать в магазин готовых макетов</h1>
         <div class="user-block">
-          <a class="basket" href="#">КОРЗИНА</a>
+          <a class="basket" href="#">Корзина</a>
         </div>        
       </div>
       </header> 
-    <main class="container">
-      <div class="breadcrumbs">
-        <b class="breadcrumbs-title"></b>
-        <ul>
-          <li>По цене</li>
-          <li>По типу</li>
-          <li>По функционалу</li>
+    <main class="container">      
+      <div class="catalog">
+        <div class="catalog-filter">
+          <b class="catalog-filter-title">Сортировать:</b>
+          <ul>
+          <li><a href="#">По цене</a></li>
+          <li><a href="#">По типу</a></li>
+          <li><a href="#">По функционалу</a></li>
         </ul>
-        <button type="button" class="btn breadcrumbs-up"></button>        
-        <button type="button" class="btn breadcrumbs-down"></button>
-      </div>
-     
-      <div class="catalog" >        
+        <a href="#" class="filter filter-up"></a>        
+        <a href="#" class="filter filter-down"></a>
+        </div>
           <article class="catalog-item">
             <figure class="catalog-content">
               <img src="http://placehold.it/150x100" alt="">
@@ -79,13 +70,14 @@
             <figure class="catalog-content">
               <img src="http://placehold.it/150x100" alt="">
             </figure>
-          </article>  
+          </article>
+          <div class="catalog-pagination">  
           <a href="#" class="catalog-btn" >1</a>
            <a href="#" class="catalog-btn" >2</a>
             <a href="#" class="catalog-btn" >3</a>
              <a href="#" class="catalog-btn" >Следующая</a>
+           </div>
       </div>
-
        <div class="sidebar">
         <form action="#" method="post">
           <fieldset>
@@ -94,49 +86,55 @@
           от 0 до 15000
         </fieldset>
         <fieldset>
-          <legend class="sidebar-title">Особенности:</legend>
-          <input type="radio" name="features" value="Адаптивная">Адаптивная
-          <input type="radio" name="features" value="Фиксированная">Фиксированная
-          <input type="radio" name="features" value="Резиновая">Резиновая
+          <legend class="sidebar-title">Сетка:</legend>
+          <label for="grid-item-1">Адаптивная</label>
+          <input type="radio" name="grid" value="Адаптивная" id="grid-item-1">
+           <label for="grid-item-2">Фиксированная</label>
+          <input type="radio" name="grid" value="Фиксированная" id="grid-item-2">
+           <label for="grid-item-3">Резиновая</label>
+          <input type="radio" name="grid" value="Резиновая" id="grid-item-3">
         </fieldset>
         <fieldset>
           <legend class="sidebar-title">Особенности:</legend>
-          <input type="checkbox" name="features">Слайдер
-          <input type="checkbox" name="features">Блок приемуществ
-          <input type="checkbox" name="features">Новости
-          <input type="checkbox" name="features">Галерея
-          <input type="checkbox" name="features">Показать
+          <label for="features-item-1">Слайдер</label>
+          <input type="checkbox" name="features" id="features-item-1">
+          <label for="features-item-2">Блок приемуществ</label>
+          <input type="checkbox" name="features" id="features-item-2">
+          <label for="features-item-3">Новости</label>
+          <input type="checkbox" name="features" id="features-item-3">
+          <label for="features-item-4">Галерея</label>
+          <input type="checkbox" name="features" id="features-item-4">
+          <label for="features-item-5">Корзина</label>
+          <input type="checkbox" name="features" id="features-item-5">
         </fieldset>
-        <a href="#" class="sidebar-anchor">Показать</a>
+        <button type="button" class="sidebar-btn">Показать</button>
         </form>
-        <div>    
+        </div>    
       <div class="contacts">
         <section class="contacts-adress">
-          <h2>NERDS DESIGN STUDIO</h2>
+          <h2>NERDS Design Studio</h2>
           191186, Санкт-петербург<br>
           ул.Б.Коннюшенная, д.19/8
           тел.+7(812)275-75-75
-          <section>
+          </section>
       </div>
     </main>
         <footer class="main-footer">
-      <div class="container">
-        <div class="footer-content">
+      <div class="container">       
           <div class="footer-content-left">
-            <section class="footer-content-social">
+            <div class="footer-content-social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-            </section>
+            </div>
         </div>
-
         <div class="footer-content-right">
-          <section class="footer-content-aside">
+          <div class="footer-content-aside">
             <span>Давайте дружить,это выгодно</span>
             <p>Скидка 10% для друзей из социальных сетей</p>
-          </section>
+          </div>
         </div>
-      </div>
+        </div>      
     </footer>  
   </body>
 </html>
