--- a/index.html
+++ b/index.html
@@ -11,22 +11,13 @@
       	 	<div class="index-logo">
         <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
           </div>
-      	 	<ul>
-            <li>
-              <a href="#">Студия</a>
-            </li>
-            <li>
-              <a href="#">Клиенты</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>            
-          </ul>
-          
-        </nav>
+      	 <ul>
+            <li><a href="#">Студия</a></li>             
+            <li><a href="#">Клиенты</a></li>             
+            <li><a href="#">Магазин</a></li>             
+            <li><a href="#">Контакты</a></li>             
+          </ul>         
+          </nav>
         <div class="user-block">
           <a class="basket" href="#">Корзина</a>
         </div>
@@ -105,24 +96,18 @@
        			<div class="aside-content-left">
        				<h2 class="aside-content-title">Выполняем заказы на разработку:</h2>
        				<ul>
-       					<li>Веб сайтов любой сложности
-       					</li>
-       					<li>Мобильных приложений для IOS и Android
-       					</li>
-       					<li>Слайдшоу и видео для корпоративных презинтаций
-       					</li>
+       					<li>Веб сайтов любой сложности</li>       					
+       					<li>Мобильных приложений для IOS и Android</li>       					
+       					<li>Слайдшоу и видео для корпоративных презинтаций</li>       					
        				</ul>
        			</div>
 
        			<div class="aside-content-right">
        				<h2 class="aside-content-title">Как мы работаем:</h2>
        				<ul>
-       					<li>С самоотдачей 146%
-       					</li>
-       					<li>Соблюдая сроки на 100%
-       					</li>
-       					<li>По предоплате 50%
-       					</li>
+       					<li>С самоотдачей 146%</li>       					
+       					<li>Соблюдая сроки на 100%</li>       					
+       					<li>По предоплате 50%</li>       					
        				</ul>
        			</div>       		
        		</div>
@@ -130,14 +115,12 @@
       <div class="gallery">
       	<ul class="gallery-list">
       		<li class="gallery-item">
-      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a>
-      		</li>
+      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a></li>      		
       		<li class="gallery-item">
-      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a>
-      		</li>
+      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a></li>      		
       		<li class="gallery-item">
-      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a>
-      		</li>
+      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a></li>
+      		
       	</ul>
       </div>
       <div class="contacts">
