--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,9 @@
       <div class="container">
          <nav class="main-navigation">
           <div class="index-logo">
-        <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
+            <a href="#">
+            <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
+          </a>
           </div>
           <ul>
             <li><a href="#">Студия</a></li>             
@@ -107,7 +109,7 @@
           <label for="features-item-5">Корзина</label>
           <input type="checkbox" name="features" id="features-item-5">
         </fieldset>
-        <button type="button" class="sidebar-btn">Показать</button>
+        <button type="submit" class="sidebar-btn">Показать</button>
         </form>
         </div>    
       <div class="contacts">
