--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       <div class="container">
       	 <nav class="main-navigation">
       	 	<div class="index-logo">
-        <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
+            <a href="#">
+            <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
+            </a>
           </div>
       	 <ul>
             <li><a href="#">Студия</a></li>             
