--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       	 <nav class="main-navigation">
       	 	<div class="index-logo">
             <a href="#">
-            <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
+            <img src="img/index/logo-11.jpg" width="139" height="56" alt="Логотип">
             </a>
           </div>
       	 <ul>
@@ -40,7 +40,7 @@
             </div>
             <div class="sider-content-right">
               <figure class="sider-image">
-                <img src="http://placehold.it/150x100" alt="">
+                <img src="img/index/slider-1.png" width="338" height="231" alt="">
               </figure>
               <form action="#" method="post">                
                 <input type="radio" name="sider" value="1">
@@ -53,7 +53,7 @@
        	<section class="features">
        		<div class="features-item">
        		<div class="features-image">
-       			<img src="http://placehold.it/150x100" alt="">
+       			<img src="img/index/Layer-1.jpg" width="290" height="124" alt="">
        		</div>
        		<b class="features-name">Веб-сайты</b>
        		<p class="features-desc">Мир никогда не будет прежним<br>
@@ -62,7 +62,7 @@
        		</div>
        		<div class="features-item">
        		<div class="features-image">
-       			<img src="http://placehold.it/150x100" alt="">
+       			<img src="img/index/Layer-2.jpg" width="290" height="124" alt="">
        		</div>
        		<b class="features-name">Приложения</b>
        		<p class="features-desc">Покорите топ-10 приложений<br>
@@ -71,7 +71,7 @@
        		</div>
        		<div class="features-item">
        		<div class="features-image">
-       			<img src="http://placehold.it/150x100" alt="">
+       			<img src="img/index/Layer-3.jpg" width="290" height="124" alt="">
        		</div>
        		<b class="features-name">Презентации</b>
        		<p class="features-desc">Вы даже не подозреваете<br>
@@ -90,7 +90,7 @@
        			</div>
        			<div class="about-company-content-right">
        				<div class="about-company-logo">
-       					<img src="http://placehold.it/150x100" alt="">
+       					<img src="img/index/logo-2.jpg" width="187" height="75" alt="">
        				</div>
        			</div>
        		</div>
@@ -117,16 +117,17 @@
       <div class="gallery">
       	<ul class="gallery-list">
       		<li class="gallery-item">
-      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a></li>      		
+      			<a href="#"><img src="img/index/partners-1.jpg" width="198" height="37" alt=""></a></li>      		
       		<li class="gallery-item">
-      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a></li>      		
+      			<a href="#"><img src="img/index/partners-2.jpg" width="199" height="68" alt=""></a></li>      		
       		<li class="gallery-item">
-      			<a href="#"><img src="http://placehold.it/150x100" alt=""></a></li>
+      			<a href="#"><img src="img/index/partners-3.jpg" width="209" height="86" alt=""></a></li>
       		
       	</ul>
       </div>
       <div class="contacts">
       	<section class="contacts-adress">
+          <img src="img/index/map-1.jpg" width="1199" height="416" alt="">
       		<h2>NERDS Design Studio</h2>
       		191186, Санкт-петербург<br>
       		ул.Б.Коннюшенная, д.19/8
