--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
          <nav class="main-navigation">
           <div class="index-logo">
             <a href="#">
-            <img src="img/index-logo.png" width="100" height="100" alt="Лого «НЁРДС»">
+             <img src="img/index/logo-11.jpg" width="139" height="56" alt="Логотип">
           </a>
           </div>
           <ul>
@@ -40,37 +40,37 @@
         </div>
           <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="http://placehold.it/150x100" alt="">
+               <img src="img/catalog/item-1.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="http://placehold.it/150x100" alt="">
+              <img src="img/catalog/item-2.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="http://placehold.it/150x100" alt="">
+              <img src="img/catalog/item-3.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="http://placehold.it/150x100" alt="">
+              <img src="img/catalog/item-4.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="http://placehold.it/150x100" alt="">
+              <img src="img/catalog/item-5.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="http://placehold.it/150x100" alt="">
+              <img src="img/catalog/item-6.jpg" width="240" height="270" alt="">
             </figure>
           </article>
           <div class="catalog-pagination">  
@@ -114,6 +114,7 @@
         </div>    
       <div class="contacts">
         <section class="contacts-adress">
+          <img src="img/index/map-1.jpg" width="1199" height="416" alt="">
           <h2>NERDS Design Studio</h2>
           191186, Санкт-петербург<br>
           ул.Б.Коннюшенная, д.19/8
