Внесение правок раздел Ps

--- a/catalog.html
+++ b/catalog.html
@@ -41,37 +41,37 @@
         </div>
           <article class="catalog-item">
             <figure class="catalog-content">
-               <img src="img/catalog/item-1.jpg" width="240" height="270" alt="">
+               <img src="img/catalog/items-1.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="img/catalog/item-2.jpg" width="240" height="270" alt="">
+              <img src="img/catalog/items-2.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="img/catalog/item-3.jpg" width="240" height="270" alt="">
+              <img src="img/catalog/items-3.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="img/catalog/item-4.jpg" width="240" height="270" alt="">
+              <img src="img/catalog/items-4.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="img/catalog/item-5.jpg" width="240" height="270" alt="">
+              <img src="img/catalog/items-5.jpg" width="240" height="270" alt="">
             </figure>
           </article>
 
            <article class="catalog-item">
             <figure class="catalog-content">
-              <img src="img/catalog/item-6.jpg" width="240" height="270" alt="">
+              <img src="img/catalog/items-6.jpg" width="240" height="270" alt="">
             </figure>
           </article>
           <div class="catalog-pagination">  
