--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
     <title>Нёрдс</title>
   </head>
   <body>
       <header class="main-header">
-      <div class="container">
-      	 <nav class="main-navigation">
-      	 	<div class="index-logo">
+      <div class="container clearfix">
+      <div class="index-logo">
             <a href="#">
-            <img src="img/index/logo-11.jpg" width="139" height="56" alt="Логотип">
-            </a>
+            <img src="img/index/logo.png" width="139" height="56" alt="Логотип"></a>            
           </div>
+      	 <nav class="main-navigation">      	 	
       	 <ul>
             <li><a href="#">Студия</a></li>             
             <li><a href="#">Клиенты</a></li>             
@@ -23,15 +23,14 @@
           </nav>
         <div class="user-block">
           <a class="basket" href="#">Корзина</a>
-        </div>
-        
+        </div>        
       </div>
       </header> 
        <main class="container">
        	<div class="slider">
-          <div class="sider-content">
-            <div class="sider-content-left">
-              <span class="sider-slogan">
+          <div class="slider-content clearfix">
+            <div class="slider-content-left">
+              <span class="slider-slogan">
                 Долго,дорого,скрупулезно
               </span>
               <p>Математически выверенный дизайн<br>
@@ -39,15 +38,10 @@
               </p>
               <a href="#">Узнать больше</a>
             </div>
-            <div class="sider-content-right">
-              <figure class="sider-image">
+            <div class="slider-content-right">
+              <figure class="slider-image">
                 <img src="img/index/slider-1.png" width="338" height="231" alt="">
-              </figure>
-              <form action="#" method="post">                
-                <input type="radio" name="sider" value="1">
-                <input type="radio" name="sider" value="2">
-                <input type="radio" name="sider" value="3">
-              </form>
+              </figure>             
             </div>
           </div>   
        	</div>
@@ -91,7 +85,7 @@
        			</div>
        			<div class="about-company-content-right">
        				<div class="about-company-logo">
-       					<img src="img/index/logo-2.jpg" width="187" height="75" alt="">
+       					<img src="img/index/logo-1.png" width="187" height="75" alt="">
        				</div>
        			</div>
        		</div>
@@ -118,11 +112,11 @@
       <div class="gallery">
       	<ul class="gallery-list">
       		<li class="gallery-item">
-      			<a href="#"><img src="img/index/partners-1.jpg" width="198" height="37" alt=""></a></li>      		
+      			<a href="#"><img src="img/index/partner-1.png" width="198" height="37" alt=""></a></li>      		
       		<li class="gallery-item">
-      			<a href="#"><img src="img/index/partners-2.jpg" width="199" height="68" alt=""></a></li>      		
+      			<a href="#"><img src="img/index/partner-2.png" width="199" height="68" alt=""></a></li>      		
       		<li class="gallery-item">
-      			<a href="#"><img src="img/index/partners-3.jpg" width="209" height="86" alt=""></a></li>
+      			<a href="#"><img src="img/index/partner-3.png" width="209" height="86" alt=""></a></li>
       		
       	</ul>
       </div>
